fix: Avoid horizontal shift when scroll appears

--- a/pruebas/01-reading-list/fernandochaza/book-reading-list/src/index.css
+++ b/pruebas/01-reading-list/fernandochaza/book-reading-list/src/index.css
@@ -4,3 +4,19 @@
   box-sizing: border-box;
   font-family: 'Lato', sans-serif; 
 }
+
+body {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-track {
+  background: #dee4e7;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background-color: #484845;
+}
